[TG-191] Fix alignment of remove button for actions and conditions

--- a/src/app/scenarios/scenarios-list/scenario-list.scss
+++ b/src/app/scenarios/scenarios-list/scenario-list.scss
@@ -49,6 +49,7 @@
 .scenario-list-table {
     &__body {
         &__row {
+            cursor: pointer;
             &__actions {
                 width: 150px;
                 
